<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ic_menu"
        android:enabled="true"
        android:icon="@drawable/menu_vertical"
        android:title="@string/main_menu"
        android:visible="true"
        app:showAsAction="always" >

        <menu>
            <item android:id="@+id/send_feedback"
                android:icon="@drawable/send_outline"
                android:title="@string/send_feedback"
                app:showAsAction="ifRoom"/>

            <item android:id="@+id/share"
                android:icon="@drawable/share_variant_outline"
                android:title="@string/share"
                app:showAsAction="ifRoom"/>

            <item android:id="@+id/dark_light"
                android:icon="@drawable/icon_light"
                android:title="@string/darkMode"
                app:showAsAction="ifRoom"/>

            <item android:id="@+id/exit"
                android:icon="@drawable/exit_to_app"
                android:title="@string/exit"
                app:showAsAction="always"/>

        </menu>


    </item>
</menu>