<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ic_menu"
        android:enabled="true"
        android:icon="@drawable/menu"
        android:title="@string/second_menu"
        android:visible="true"
        app:showAsAction="always" >

        <menu>
            <item
                android:id="@+id/search"
                android:title="@string/search"
                android:icon="@drawable/search"
                app:showAsAction="ifRoom" />

            <item android:id="@+id/order"
                android:icon="@drawable/order_alphabetical_ascending"
                android:title="@string/order"
                app:showAsAction="ifRoom"/>

        </menu>


    </item>

</menu>